# Diffusion_Neural_Audio_Coder

./: .gitignore  README.md  main.py  pyproject.toml
demo/: codec_test.py  eval_codec.py  plots_and_demo.ipynb  vocoder.py
demo/exp_1/: eval_codec.py
demo/exp_2/: eval_codec.py  model.py  vocoder.py
demo/exp_3/: eval_codec.py  model.py  train.py  train_module.py
demo/exp_4/: eval_codec.py  model.py  train.py  train_module.py
demo/exp_5/: eval_codec.py  model.py  train.py  train_module.py
demo/exp_6/: __init__.py  config.py  eval_codec.py  model.py  quantization.py  train.py  train_module.py  utils.py
plots/: loss_curves.json  loss_curves_exp3.json  loss_curves_exp4.json  loss_curves_exp5.json
src/: codec_test.py  config.py  dataset.py  eval_codec.py  model.py  preprocess.py  test_model.py  train.py  train_module.py  utils.py  utils_audio.py  vocoder.py
tests/: test_dataset.py  test_model.py  test_new_model.py  test_vocoder.py
utils/: plot_loss.py  save_model.py
