[project]
name = "tanya-diffusion-audio-coder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "auraloss>=0.4.0",
    "bigvgan>=2.4.1",
    "bitsandbytes>=0.49.0",
    "einops>=0.8.1",
    "huggingface-hub>=0.23.4",
    "ipykernel>=7.1.0",
    "librosa>=0.8.1",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "ninja>=1.13.0",
    "nnaudio>=0.3.4",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pesq>=0.0.4",
    "pystoi>=0.4.1",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "soundfile>=0.13.1",
    "speechbrain>=1.0.3",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "xformers>=0.0.33.post2",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
]
